<resources>
    <string name="app_name">SA Remote Controller</string>
    <string name="connect">オンライン</string>
    <string name="button">オフライン</string>
    <string name="blueToothButton">BlueTooth接続</string>
    <string name="sub">test</string>
    <string name="move">test</string>
    <string name="textview">TextView</string>
    <string name="userName">ユーザ名</string>
    <string name="passWard">パスワード</string>
    <string name="not_support">ご利用のデバイスはBluetoothをサポートしていません</string>
    <string name="max_speed_100">Max Speed: 100%</string>
    <string name="rotation_speed_0">Rotation Speed:   0%</string>
    <string name="button_exit">戻る</string>
    <string name="sensor">SENSOR</string>
    <string name="sensor2">SENSOR</string>
    <string name="roomName">ルーム名</string>
    <string name="rotate_right">Rotate_Right</string>
    <string name="rotate_left">Rotate_Left</string>
    <string name="rotateText">0%</string>
    <string name="buttonCreate">部屋作成</string>
    <string name="buttonUpdate">更新</string>
    <string name="numText">テキスト</string>
    <string name="roomButton">RoomName\nUser\n</string>
    <string name="text_view">Text\nView</string>
</resources>